force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>