force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Communication_Key__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Communication_Key__c</fullName>
    <description>Concatenation of Account and related Account&apos;s Record Type. Two records with the same key cannot both have primary checked.</description>
    <label>Communication Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>