force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Company_Name__c</fullName>
    <description>Name of the company. Used when relating a work address to a person.</description>
    <inlineHelpText>Name of the company. Used when relating a work address to a person.</inlineHelpText>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>