force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Country__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Country__c</fullName>
    <label>Country</label>
    <length>42</length>
    <type>Text</type>
</CustomField>