force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>