force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Email__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>