force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Phone__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>