force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>42</length>
    <type>Text</type>
</CustomField>