force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Primary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the primary of this type? If it is it will be copied over to the related account&apos;s record</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>