force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Primary_Mailing__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Primary_Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Mailing</label>
    <type>Checkbox</type>
</CustomField>