force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Related_Account__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that this communication is related to</description>
    <inlineHelpText>The account that this communication is related to</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Records</relationshipLabel>
    <relationshipName>Communication_Records</relationshipName>
    <type>Lookup</type>
</CustomField>