force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Related Account&quot; field, just pointed to the Contact object instead of Account</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communication Records</relationshipLabel>
    <relationshipName>Communication_Records</relationshipName>
    <type>Lookup</type>
</CustomField>