force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Street__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>