force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__SubType__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SubType__c</fullName>
    <description>These picklist values are displayed based on the type (Phone, Address etc.) and the related Account&apos;s record type (Person Account, Organization, Work)</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OneCRM__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>