force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__Unique_Concatenation_Primary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Unique_Concatenation_Primary__c</fullName>
    <description>A concatenation of the type, subtype and related_account__c. Note this is to identify the primary, not the mailing primary. This is only filled if primary is checked.</description>
    <label>Unique Concatenation Primary</label>
    <type>TextArea</type>
</CustomField>