force-app/main/default/objects/OneCRM__Communication__c/fields/OneCRM__URL__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>